[package]
name = "defios"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "defios"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version = "0.27.0", features = ["init-if-needed"]}
anchor-spl = "0.27.0"
sha256 = "1.1.3"
solana-program = "~1.14.16"
