[package]
name = "defios"
version = "0.1.0"
description = "Main github on-chain integrations by DefiOS"
authors = ["Tanmay Munjal <tanmaymunjal64@gmail.com>"]
repository = "https://github.com/defi-os/defios-rust-core"
license = "MIT"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "defios"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version = "0.29.0", features = ["init-if-needed"]}
anchor-spl = { version = "0.29.0", features = ["metadata"] }
solana-program = "~1.16.21"