[package]
name = "skill_validator"
version = "0.1.0"
description = "Skill validator program by DefiOS"
authors = ["Tanmay Munjal <tanmaymunjal64@gmail.com>"]
repository = "https://github.com/defi-os/defios-rust-core"
license = "Apache-2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version = "0.29.0", features = ["init-if-needed","event-cpi"]}
anchor-spl = "0.29.0"
solana-program = "~1.16.21"
bytemuck = "1.8.0"
spl-concurrent-merkle-tree = { version="0.1.2", path = "../../concurrent-merkle-tree",features = [ "sol-log" ]}
noop = { version = "0.1.3", path="../../noop", features = [ "no-entrypoint" ]}